fixed h1 left align on card

--- a/client/src/components/Card.css
+++ b/client/src/components/Card.css
@@ -11,9 +11,10 @@
   justify-content: center;
   align-items: center;
 }
-h1 {
+.h1-card {
   margin: 0;
   padding: 0;
+  text-align: left;
 }
 p {
   width: 100%;
